--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,8 @@ pydantic==2.10.6
     # via openai
 pydantic-core==2.27.2
     # via pydantic
+python-dotenv==1.0.1
+    # via -r requirements.in
 requests==2.32.3
     # via youtube-transcript-api
 sniffio==1.3.1
