--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,10 @@ anyio==4.8.0
     # via
     #   httpx
     #   openai
+attrs==25.1.0
+    # via
+    #   outcome
+    #   trio
 blinker==1.9.0
     # via flask
 certifi==2025.1.31
@@ -17,6 +21,9 @@ certifi==2025.1.31
     #   httpcore
     #   httpx
     #   requests
+    #   selenium
+cffi==1.17.1
+    # via trio
 charset-normalizer==3.4.1
     # via requests
 click==8.1.8
@@ -34,7 +41,9 @@ flask==3.1.0
 gunicorn==23.0.0
     # via -r requirements.in
 h11==0.14.0
-    # via httpcore
+    # via
+    #   httpcore
+    #   wsproto
 httpcore==1.0.7
     # via httpx
 httpx==0.28.1
@@ -44,6 +53,7 @@ idna==3.10
     #   anyio
     #   httpx
     #   requests
+    #   trio
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.5
@@ -56,31 +66,55 @@ markupsafe==3.0.2
     #   werkzeug
 openai==1.63.0
     # via -r requirements.in
+outcome==1.3.0.post0
+    # via trio
 packaging==24.2
     # via gunicorn
+pycparser==2.22
+    # via cffi
 pydantic==2.10.6
     # via openai
 pydantic-core==2.27.2
     # via pydantic
+pysocks==1.7.1
+    # via urllib3
 python-dotenv==1.0.1
     # via -r requirements.in
 requests==2.32.3
     # via youtube-transcript-api
+selenium==4.28.1
+    # via -r requirements.in
 sniffio==1.3.1
     # via
     #   anyio
     #   openai
+    #   trio
+sortedcontainers==2.4.0
+    # via trio
 tqdm==4.67.1
     # via openai
+trio==0.29.0
+    # via
+    #   selenium
+    #   trio-websocket
+trio-websocket==0.11.1
+    # via selenium
 typing-extensions==4.12.2
     # via
     #   anyio
     #   openai
     #   pydantic
     #   pydantic-core
-urllib3==2.3.0
-    # via requests
+    #   selenium
+urllib3[socks]==2.3.0
+    # via
+    #   requests
+    #   selenium
+websocket-client==1.8.0
+    # via selenium
 werkzeug==3.1.3
     # via flask
+wsproto==1.2.0
+    # via trio-websocket
 youtube-transcript-api==0.6.3
     # via -r requirements.in
